Fixed title overflow on homepage cards when title was too long

--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -50,7 +50,7 @@
   display: -webkit-box;
   padding-top: 2%;
 
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
 
@@ -70,7 +70,7 @@
 }
 
 #cards_landscape_wrap-2 .card-flyer .text-box .text-container {
-  padding: 1vw 16px;
+  padding: 1vw 8px;
   font-family: 'Roboto Black', sans-serif;
 }
 
@@ -115,19 +115,44 @@
   letter-spacing: 1px;
 }
 
-
-.with-overflow {
+.text-break {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
 
+}
+
+
+.with-overflow {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+
+}
+
+@media (max-width: 1594px) {
+  .with-overflow{
+    -webkit-line-clamp: 3;
+  }
+
+  .text-break{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
 
 @media (max-width: 1200px) {
   #cards_landscape_wrap-2 .card-flyer .image-box img{
     height: 250px;
     max-height: 20rem;
+  }
+
+  .with-overflow{
+    -webkit-line-clamp: 5;
   }
 
   .text-container{
